--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <section id='ocfl-object'>
         <h2>OCFL Object</h2>
         <p>
-           An OCFL Object is a base directory that contains a set of required and optional files and folders.
+           An OCFL Object is ...
         </p>
       </section>
 
