--- a/index.html
+++ b/index.html
@@ -9,32 +9,43 @@
     <script class='remove'>
         var respecConfig = {
             specStatus: "unofficial",
-            shortName:  "ocfl-spec",
+            shortName: "ocfl-spec",
             includePermalinks: true,
             editors: [
-                {   name:       "Andrew Hankinson",
-                    company:    "Bodleian Libraries, University of Oxford",
-                    companyURL: "http://www.bodleian.ox.ac.uk/"},
-                {   name:       "Neil Jefferies",
-                    company:    "Bodleian Libraries, University of Oxford",
-                    companyURL: "http://www.bodleian.ox.ac.uk/"},
-                {   name:       "Rosalyn Metz",
-                    company:    "Emory University",
-                    companyURL: ""},
-                {   name:       "Julian Morley",
-                    company:    "Stanford University",
-                    companyURL: ""},
-                {   name:       "Simeon Warner",
-                    company:    "Cornell University",
-                    companyURL: "http://www.cornell.edu/"},
-                {   name:       "Andrew Woods",
-                    company:    "DuraSpace",
-                    companyURL: "http://duraspace.org/"}
+                {
+                    name: "Andrew Hankinson",
+                    company: "Bodleian Libraries, University of Oxford",
+                    companyURL: "http://www.bodleian.ox.ac.uk/"
+                },
+                {
+                    name: "Neil Jefferies",
+                    company: "Bodleian Libraries, University of Oxford",
+                    companyURL: "http://www.bodleian.ox.ac.uk/"
+                },
+                {
+                    name: "Rosalyn Metz",
+                    company: "Emory University",
+                    companyURL: ""
+                },
+                {
+                    name: "Julian Morley",
+                    company: "Stanford University",
+                    companyURL: ""
+                },
+                {
+                    name: "Simeon Warner",
+                    company: "Cornell University",
+                    companyURL: "http://www.cornell.edu/"
+                },
+                {
+                    name: "Andrew Woods",
+                    company: "DuraSpace",
+                    companyURL: "http://duraspace.org/"
+                }
             ],
             edDraftURI: "https://ocfl.github.io/spec/",
-            testSuiteURI: "",
-            wg:           "Oxford Common File Layout Editors",
-            wgURI:        "",
+            wg: "Oxford Common File Layout Editors",
+            wgURI: "https://ocfl.io",
             wgPublicList: "",
             otherLinks: [{
                 key: "Previous version",
@@ -43,7 +54,7 @@
                         value: "N/A"
                     }
                 ]
-            },{
+            }, {
                 key: "Repository",
                 data: [
                     {
@@ -65,79 +76,94 @@
                 ]
             }],
             maxTocLevel: 3,
-            logos: [{src: "https://avatars0.githubusercontent.com/u/35607965",
+            logos: [{
+                src: "https://avatars0.githubusercontent.com/u/35607965",
                 alt: "OCFL Logo",
                 width: 307,
-                height: 307}],
+                height: 307
+            }],
             overrideCopyright: "<p class='copyright'>This document is licensed under a <a class='subfoot' href='https://creativecommons.org/licenses/by/4.0/' rel='license'>Creative Commons Attribution 4.0 License</a>.</p>"
         };
     </script>
     <style>
         em.rfc2119 {
-            text-transform:     lowercase;
-            font-variant:       small-caps;
-            font-style:         normal;
-            color:              #900;
+            text-transform: lowercase;
+            font-variant: small-caps;
+            font-style: normal;
+            color: #900;
         }
     </style>
 </head>
 <body>
-    <section id="abstract" class="informative">
-        <h2>Introduction</h2>
-        <p>
-            The Oxford Common File Layout (OCFL) is a file-and-folder hierarchy designed to promote long-term, application-independent file management best practices within digital repositories.
-        </p>
-        <p>
-            This specification covers two principle areas:
-        </p>
-        <ol>
-            <li>Structure. A normative specification of the nature of an OCFL Object (the "object-at-rest");</li>
-            <li>2. Client Behaviours. A set of recommendations for how OCFL Objects should be acted upon (the "object-in-motion")</li>
-        </ol>
-        <section id="need">
-            <h2>Need</h2>
-            <p>The OCFL initiative arose from a need to have well-defined application-independent file management within digital repositories.</p>
-            <p>A general observation is that the contents of a digital repository -- that is, the digital files and metadata that an institution might wish to manage -- are largely stable. Once content has been accessioned, it is unlikely to change significantly over its lifetime. This is in contrast to the software applications that manage these contents, which are ephemeral, requiring constant updating and replacement. Thus, transitions between application-specific methods of file management to support software upgrades and replacement cycles can be seen as unnecessary and risky change, changing the long-term stable objects to support the short-term, ephemeral software.</p>
-            <p>By providing a specification for the file-and-folder layout on disk, the OCFL is an attempt at reducing, or even eliminating, the need for these transitions. As an application-independent specification, conforming applications will natively 'understand' the underlying file structure without needing to first transition these contents to their own format.</p>
-        </section>
+<section id="abstract" class="informative">
+    <h2>Introduction</h2>
+    <p>
+        The Oxford Common File Layout (OCFL) is a file-and-folder hierarchy designed to promote long-term,
+        application-independent file management best practices within digital repositories.
+    </p>
+    <p>
+        This specification covers two principle areas:
+    </p>
+    <ol>
+        <li>Structure. A normative specification of the nature of an OCFL Object (the "object-at-rest");</li>
+        <li>2. Client Behaviours. A set of recommendations for how OCFL Objects should be acted upon (the
+            "object-in-motion")
+        </li>
+    </ol>
+    <section id="need">
+        <h2>Need</h2>
+        <p>The OCFL initiative arose from a need to have well-defined application-independent file management within
+            digital repositories.</p>
+        <p>A general observation is that the contents of a digital repository -- that is, the digital files and metadata
+            that an institution might wish to manage -- are largely stable. Once content has been accessioned, it is
+            unlikely to change significantly over its lifetime. This is in contrast to the software applications that
+            manage these contents, which are ephemeral, requiring constant updating and replacement. Thus, transitions
+            between application-specific methods of file management to support software upgrades and replacement cycles
+            can be seen as unnecessary and risky change, changing the long-term stable objects to support the
+            short-term, ephemeral software.</p>
+        <p>By providing a specification for the file-and-folder layout on disk, the OCFL is an attempt at reducing, or
+            even eliminating, the need for these transitions. As an application-independent specification, conforming
+            applications will natively 'understand' the underlying file structure without needing to first transition
+            these contents to their own format.</p>
     </section>
+</section>
 
-    <section id='sotd'>
-    </section>
+<section id='sotd'>
+</section>
 
-    <section id='structure'>
-      <h2>Structure</h2>
+<section id='conformance'>
+    <p></p>
+</section>
 
-      <section id='ocfl-object'>
-        <h2>OCFL Object</h2>
-        <p>
-           An OCFL Object is ...
-        </p>
-      </section>
+<section id="terminology">
+    <h2>Terminology</h2>
+</section>
 
-      <section id='basic-structure'>
+<section id="object-spec">
+    <h2>Object Specification</h2>
+
+    <section id='basic-structure'>
         <h2>Basic Structure</h2>
         <p>
-          A basic OCFL Object Structure
+            A basic OCFL Object Structure
         </p>
-      </section>
-
-      <section id='conformance'>
-        <h2>Specifications Conformance</h2>
-        <p>
-          The OCFL specification will change over time, and these changes will be published as versioned updates.
-          OCFL Objects are self-describing, and provide an indication of the version of the specification to which they should conform.
-        </p>
-        <section id='version-declaration'>
-          <h2>OCFL Version declaration</h2>
-          <p>
-           The version declaration MUST be an empty file in the base directory of the object giving the OCFL object version in the filename.
-           This MUST be formatted with a leading zero-equals (0=), 'ocfl_object', and the version number.
-           A regular expression intended to validate this name is provided below.
-          </p>
-        </section>
-      </section>
     </section>
+
+    <section id='version-declaration'>
+        <h2>Version declaration</h2>
+        <p>
+            The version declaration MUST be an empty file in the base directory of the object giving the OCFL object
+            version in the filename. This MUST be formatted with a leading zero-equals (0=), 'ocfl_object', and the version number.
+            A regular expression intended to validate this name is provided below.
+        </p>
+    </section>
+</section>
+
+<section id="implementation">
+    <h2>Implementation Considerations</h2>
+</section>
+
+
 
 </body>
 </html>
