--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
                 {
                     name: "Rosalyn Metz",
                     company: "Emory University",
-                    companyURL: ""
+                    companyURL: "https://web.library.emory.edu/"
                 },
                 {
                     name: "Julian Morley",
                     company: "Stanford University",
-                    companyURL: ""
+                    companyURL: "https://library.stanford.edu/"
                 },
                 {
                     name: "Simeon Warner",
+	            url: "https://orcid.org/0000-0002-7970-7855", 
                     company: "Cornell University",
-                    companyURL: "http://www.cornell.edu/"
+                    companyURL: "https://www.library.cornell.edu/"
                 },
                 {
                     name: "Andrew Woods",
@@ -43,7 +44,7 @@
                     companyURL: "http://duraspace.org/"
                 }
             ],
-            edDraftURI: "https://ocfl.github.io/spec/",
+            edDraftURI: "https://ocfl.io",
             wg: "Oxford Common File Layout Editors",
             wgURI: "https://ocfl.io",
             wgPublicList: "",
@@ -106,7 +107,7 @@
     </p>
     <ol>
         <li>Structure. A normative specification of the nature of an OCFL Object (the "object-at-rest");</li>
-        <li>2. Client Behaviours. A set of recommendations for how OCFL Objects should be acted upon (the
+        <li>Client Behaviours. A set of recommendations for how OCFL Objects should be acted upon (the
             "object-in-motion")
         </li>
     </ol>
