A stab at definitions

--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 <section id="abstract" class="informative">
     <h2>Introduction</h2>
     <p>
-        The Oxford Common File Layout (OCFL) is a file-and-folder hierarchy designed to promote long-term,
-        application-independent file management best practices within digital repositories.
+      This Oxford Common File Layout (OCFL) specification describes an application-independent approach to the
+      storage of digital information in a structured, transparent, and predictable manner. It is designed to
+      promote long-term object management best practices within digital repositories.
     </p>
     <p>
         This specification covers two principle areas:
@@ -141,6 +142,11 @@
 
 <section id="object-spec">
     <h2>Object Specification</h2>
+    <p>
+      An OCFL Object is a group of one or more content bitstreams and their administrative information
+      that are together identified by a URI. The object may contain a sequence of versions of the bitstreams
+      that represent the evolution of the object's contents.
+    </p>
 
     <section id='basic-structure'>
         <h2>Basic Structure</h2>
