Clarify content has data and metadata

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 <section id="object-spec">
     <h2>Object Specification</h2>
     <p>
-      An OCFL Object is a group of one or more content bitstreams and their administrative information
-      that are together identified by a URI. The object may contain a sequence of versions of the bitstreams
-      that represent the evolution of the object's contents.
+      An OCFL Object is a group of one or more content bitstreams (data and metadata), and their administrative
+      information that are together identified by a URI. The object may contain a sequence of versions of the
+      bitstreams that represent the evolution of the object's contents.
     </p>
 
     <section id='basic-structure'>
