--- a/index.html
+++ b/index.html
@@ -187,6 +187,29 @@
     <section id='versions-directories'>
       <h2>Versions Directories</h2>
 
+      <p>
+	OCFL object content is stored as a sequence of one or more versions. Each object version is stored in a version
+	directory under the object root. The sequence of version numbers is the sequence of positive integers: 1, 2, 3, etc.,
+	and the version directory name is constructed by adding the prefix <code>v</code>.
+      </p>
+      <p>
+	It is RECOMMENDED that implementations use version directory names constructed without zero-padding the version
+	number, ie. <code>v1</code>, <code>v2</code>, <code>v3</code>, etc..
+      </p>
+      <p>
+	For compatibility with existing filesystem conventions, implementations MAY use zero-padded version numbers,
+	with the following restriction: If zero-padded version numbers are used then they MUST start with a zero. For example,
+	in an implementation that uses five digits the version directory names <code>v00001</code> to <code>v09999</code> are
+	allowed, <code>v10000</code> is not allowed.
+      </p>
+      <p>
+	The first version of an object defines the naming convention for all versions of the object. All versions MUST use the
+	same naming convention: either a non-padded version number, or a zero-padded version number of consistent length.
+	Operations that	add a new version to an object MUST follow the directory naming convention established by earlier
+	versions. In all cases, references to files inside version directories from inventory files MUST use the actual version
+	directory names.
+      </p>
+
       <section id='version-declaration'>
           <h2>Version declaration</h2>
           <p>
