Make desc/regex match example

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
       <h2>Object Conformance Declaration</h2>
       <p>
         The version declaration MUST be an empty file in the base directory of the object giving the OCFL object
-        version in the filename. This MUST be formatted with a leading zero-equals (0=), 'ocfl_object', and the version number.
-        The Perl compatible regular expression <code>^0=ocfl_object(\d+\.\d+)$</code> MAY be used to validate this name and to
-	extract the OCFL version number.
+        version in the filename. This MUST be formatted with a leading zero-equals (0=), 'ocfl_object_', and the OCFL
+        specification version number. The Perl compatible regular expression <code>^0=ocfl_object_(\d+\.\d+)$</code>
+        MAY be used to validate this name and to extract the OCFL specification version number.
       </p>
     </section>
 
