Clarify that all versions of a specific object must use same naming convention

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 	allowed, <code>v10000</code> is not allowed.
       </p>
       <p>
-	The first version of an object defines the naming convention for all versions of the object. All versions MUST use the
-	same naming convention: either a non-padded version number, or a zero-padded version number of consistent length.
-	Operations that	add a new version to an object MUST follow the directory naming convention established by earlier
+	The first version of an object defines the naming convention for all versions of the object. All versions of an object
+	MUST use the same naming convention: either a non-padded version number, or a zero-padded version number of consistent
+	length. Operations that add a new version to an object MUST follow the directory naming convention established by earlier
 	versions. In all cases, references to files inside version directories from inventory files MUST use the actual version
 	directory names.
       </p>
