Fixed: Added SHA512 to table listing hash algorithms

--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
                     <td>sha256</td>
                     <td>Non-truncated only; note performance implications.</td>
                 </tr>
+                <tr>
+                    <td>sha512</td>
+                    <td>Default choice. Non-truncated forms only.</td>
+                </tr>
             </tbody>
         </table>
     </p>
