Fixed: Update language per RFC2119
Refs #35

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </p>
     <p>
         The hash of the inventory MUST be computed only after all changes to the inventory 
-        have been made. As such, it is RECOMMENDED that this sidecar file be created as the last step in creating a new version.
+        have been made, so this sidecar file SHOULD be created as the last step in the versioning process.
     </p>
   </section>
 
