Fixed: Language changes to agreed RFC2119
No substantive changes.

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             integers: 1, 2, 3, etc., and the version directory name is constructed by adding the prefix <code>v</code>.
         </p>
         <p>
-            It is RECOMMENDED that implementations use version directory names constructed without zero-padding the
+            Implementations SHOULD use version directory names constructed without zero-padding the
             version number, ie. <code>v1</code>, <code>v2</code>, <code>v3</code>, etc..
         </p>
         <p>
