Add .travis.yml and badge to README
..with the following restrictions on the ReSpec document:
- html5validator
- line length not to exceed 120 characters

Resolves: https://github.com/OCFL/spec/issues/47

--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
             </tbody>
         </table>
         <p>
-            Implementers MAY wish to store their file hashes in a system external to their OCFL object stores at the point
-            of ingest, to further safeguard against the possibility of malicious manipulation of file contents and
+            Implementers MAY wish to store their file hashes in a system external to their OCFL object stores at the
+            point of ingest, to further safeguard against the possibility of malicious manipulation of file contents and
             checksums.
         </p>
     </section>
