Fixed: Clarification of logs section
 - Make log directory optional
 - Clarify section paragraph as informative. (ReSpec only likes sections
set to informative, so this is set as a 'note').
 - Soften language on clients writing to log directory.

--- a/index.html
+++ b/index.html
@@ -181,16 +181,23 @@
     <section id="logs-directory">
         <h2>Logs Directory</h2>
         <p>
-            The base directory of the object MUST contain a logs directory, which MAY be empty. Implementers SHOULD use
-            this for storing files that log any actions taken on the object. Since these logs may be subject to local
-            standards adherence needs, the format of these logs is considered out-of-scope for the OCFL Object. However,
-            clients operating on the object SHOULD log actions here that are not otherwise captured.
+            The base directory of the object MAY contain a logs directory, which MAY be empty. Implementers SHOULD use
+            this for storing files that contain a record of actions taken on the object. Since these logs may be subject
+            to local standards requirements, the format of these logs is considered out-of-scope for the OCFL Object.
+            Clients operating on the object MAY log actions here that are not otherwise captured.
         </p>
-        <p>
-            The purpose of the logs directory is to provide implementers with a location for storing local information
-            about the object that may not necessarily be part of the object itself, and to expand on the processable
-            information that can be found in the object's inventory.
-        </p>
+        <div class="note">
+            <p>
+                The purpose of the logs directory is to provide implementers with a location for storing local information
+                about actions to the object that may not necessarily be part of the object itself.
+            </p>
+            <p>
+                As an example, implementers may have different local requirements to store audit information for their
+                digital objects. Some may wish to store a log entry indicating that an audit was conducted, and
+                nothing was wrong, while others may wish to only store a log entry if an intervention was required.
+            </p>
+        </div>
+
     </section>
 
     <section id="top-level-inventory">
