--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
     <section id="digest-algorithm-choice">
         <h2>Digest Algorithm Choice</h2>
         <p>
-            Digests play two roles in an OCFL Object. The first is that digests allow for content-addressable storage; that
-            is, for a file to be addressed by the digest of its contents, rather than its filename. The second is that
-            digests provide for fixity checks to determine whether a file has become corrupt through hardware degradation or
-            malicious actors.
+            Digests play two roles in an OCFL Object. The first is that digests allow for content-addressable storage;
+            that is, for a file to be addressed by the digest of its contents, rather than its filename. The second is
+            that digests provide for fixity checks to determine whether a file has become corrupt through hardware
+            degradation or malicious actors.
         </p>
         <p>
             OCFL Objects SHOULD use SHA512 by default. The choice of SHA512 recognizes that it has no known collision
