Fixed: long lines

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                 width: 307,
                 height: 307
             }],
-            overrideCopyright: '<p class="copyright">This document is licensed under a <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 License</a>.</p>',
+            overrideCopyright: '<p class="copyright">This document is licensed under a ' +
+                '<a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">' +
+                'Creative Commons Attribution 4.0 License</a>.</p>',
             localBiblio: {
                 "NAMASTE": {
                     title: "Directory Description with Namaste Tags",
@@ -199,8 +201,8 @@
         </p>
         <div class="note">
             <p>
-                The purpose of the logs directory is to provide implementers with a location for storing local information
-                about actions to the object that may not necessarily be part of the object itself.
+                The purpose of the logs directory is to provide implementers with a location for storing local
+                information about actions to the object that may not necessarily be part of the object itself.
             </p>
             <p>
                 As an example, implementers may have different local requirements to store audit information for their
